# cocotools-rs

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Cargo.toml  README.md
.github/workflows/: ci-cocotools.yaml  ci-python-rpycocotools.yaml  ci-rpycocotools-stubs.yaml  ci-rust-rpycocotools.yaml  lint-test-rust.yml  publish-python.yaml  publish-rust.yaml  publish-stubs.yaml
cocotools/: Cargo.toml  README.md
cocotools/src/: annotations.rs  argparse.rs  coco.rs  converters.rs  errors.rs  lib.rs  main.rs  mask.rs  utils.rs  visualize.rs
cocotools/src/annotations/: coco.rs  coco_pyo3.rs  coco_types.rs  load_coco.rs
cocotools/src/coco/: object_detection.rs  pyo3.rs
cocotools/src/converters/: mask.rs  masks.rs
cocotools/src/mask/: conversions.rs  utils.rs
cocotools/src/visualize/: bbox.rs  display.rs  draw.rs  segmentation.rs
cocotools/tests/: load_coco.rs
data_samples/coco_25k/: annotations.json
rpycocotools/: .gitignore  .readthedocs.yaml  Cargo.toml  README.md  back_pyproject.toml  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  temp.py
rpycocotools-stubs/: .pre-commit-config.yaml  README.md  pyproject.toml
rpycocotools-stubs/requirements/: README.md  requirements-build.txt  requirements-dev.txt  requirements-flake8.txt  requirements.txt
rpycocotools-stubs/src/rpycocotools-stubs/: __init__.pyi  anns.pyi  mask.pyi
rpycocotools/benchmark/: area.py
rpycocotools/benchmarks/: area.py  conftest.py  decode.py  load.py
rpycocotools/docs/: conf.py  dataset.rst  examples.rst  index.rst  quickstart.rst  segmentation_masks.rst
rpycocotools/python/rpycocotools/: __init__.py  anns.py  mask.py
rpycocotools/python/rpycocotools/mask/: __init__.py  mask.py
rpycocotools/requirements/: .README.md.kate-swp  README.md  requirements-benchmarks.txt  requirements-build.txt  requirements-dev.txt  requirements-doc.txt  requirements-flake8.txt  requirements-sam.txt  requirements-test.txt  requirements.txt
rpycocotools/rpycocotools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rpycocotools/src/: coco.rs  errors.rs  lib.rs  main.rs  mask.rs
rpycocotools/tests/: conftest.py  test_coco.py  test_mask.py
src/: annotations.rs  args.rs  errors.rs  lib.rs  main.rs  visualize.rs
src/annotations/: coco_types.rs  load_coco.rs  load_coco_annotations.rs
src/visualize/: bbox.rs  segmentation.rs
