[package]
name = "cocotools"
version = "0.1.0"
edition = "2021"
authors = ["Hoel Bagard"]

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
image = "0.24.5"
imageproc = "0.23.0"
rand = "0.8.5"
minifb = "0.23"
