[package]
name = "cocotools"
version = "0.0.3"
edition = "2021"
rust-version = "1.64.0"
description = "Package providing functionalities to work with COCO format datasets."
readme = "README.md"
categories = ["command-line-utilities"]
authors = ["Hoel Bagard"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
image = "0.24.5"
imageproc = "0.23.0"
rand = "0.8.5"
minifb = "0.23"
anyhow = "1.0.69"
thiserror = "1.0.38"
ndarray = "0.15.6"
pyo3 = { version = "0.18", features = ["extension-module"], optional = true}

[dev-dependencies]
rstest = "0.16.0"
proptest = "1.1.0"
rand = "0.8.5"
# ndarray-rand = "0.14.0"
criterion = {version = "0.4.0", features = ["html_reports"] }

[features]
default = []
pyo3 = ["dep:pyo3"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# [[bench]]
# name = "constructor_benchmark"
# harness = false
