[package]
name = "rpycocotools"
version = "0.0.2"
edition = "2021"
authors = ["Hoel Bagard"]

[lib]
name = "rpycocotools"
crate-type = ["cdylib"]

[dependencies]
cocotools = { path = "../cocotools", features = ["pyo3"]}
numpy = "0.18"
pyo3 = { version = "0.18", features = ["extension-module"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"